# uc2

./: .gitattributes  .gitignore  CMakeLists.txt  CREDITS.md  README.md  ROADMAP.md
.github/workflows/: build.yml  docs.yml
cli/: CMakeLists.txt
cli/src/: main.c
cli/src/compat/: compat_dos.c  compat_win32.c  getopt.c
cli/src/compat/include/: err.h
cli/src/compat/include/dos/: fnmatch.h
cli/src/compat/include/msvc/: getopt.h  unistd.h  utime.h
cli/src/compat/include/posix/sys/: stat.h
cmake/: UC2Platform.cmake  bin2c.cmake  djgpp.cmake
docs/: building.rst  conf.py  format.rst  history.rst  index.rst  library.rst  quickstart.rst  roadmap.rst  usage.rst
lib/: CMakeLists.txt
lib/include/uc2/: libuc2.h  uc2_blake3.h  uc2_blockstore.h  uc2_cdc.h  uc2_delta.h  uc2_dict.h  uc2_lz4.h  uc2_merkle.h  uc2_preprocess.h  uc2_rans.h  uc2_simhash.h  uc2_version.h.in
lib/src/: compress.c  decompress.c  super_data.S.in  uc2_blake3.c  uc2_blockstore.c  uc2_cdc.c  uc2_delta.c  uc2_dict.c  uc2_internal.h  uc2_lz4.c  uc2_merkle.c  uc2_preprocess.c  uc2_rans.c  uc2_simhash.c  uc2_tables.c
original/UC2_source/: Read Me First.txt
original/UC2_source/src/: ARCHIO.CPP  ARCHIO.H  BC.BAT  BITIO.CPP  BITIO.H  BUILDALL.BAT  COMOTERP.CPP  COMOTERP.H  COMPINT.C  COMPINT.CPP  COMPINT.H  COMP_TT.CPP  COMP_TT.H  CONTAINS.CPP  CONVERT.CPP  CONVERT.H  CPRINTF.C  CRTINIT.CAS  DAMPRO.CPP  DELTA.CPP  DELTA.H  DIRMAN.CPP  DIRMAN.H  DIVERSE.CPP  DIVERSE.H  EXETYPE.H  EXIT.CPP  FINAL.BAT  FINDBUG.BAT  FLETCH.CPP  FLETCH.H  GEN.BAT  HANDLE.CPP  HANDLE.H  K.BAT  LIST.CPP  LIST.H  LLIO.CPP  LLIO.H  LWV.BAT  (+126 more)
original/unuc2-0.6/: Makefile  unuc2.rc  win.mk
original/unuc2-0.6/compat/: Makefile  compat.c
original/unuc2-0.6/compat/include/: err.h  unistd.h
original/unuc2-0.6/compat/include/sys/: types.h  utime.h
original/unuc2-0.6/misc/: unuc2-wcx.c  unuc2-wcx.mk
tests/: CMakeLists.txt  test_cli_create.cmake  test_cli_dirs.cmake  test_cli_master.cmake
tests/archives/: basic.uc2  empty.uc2  random.uc2  single.uc2  zeros.uc2
tests/corpus/: textfile.txt
tests/scripts/: bitdump.py  create_archives.sh  roundtrip_dosbox.sh
tests/src/: test_blake3.c  test_blockstore.c  test_cdc.c  test_delta.c  test_dict.c  test_extract.c  test_identify.c  test_lz4.c  test_merkle.c  test_preprocess.c  test_rans.c  test_roundtrip.c  test_simhash.c
